processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_14_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__HPerm_.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            907345902243359370,
            7828947614562846950,
            11457993704067699945,
            3892495100168374213,
            13851442350130782381,
            11237433120130255027,
            8208890525312016619,
            12497592728156559685,
            5679820591634267396,
            11619687737260192666,
            15600433222549891385,
            3047245305681446692,
            13,
            0,
            0,
            0,
        ],
    },
)
